# LinkPrediction

./: .gitignore  CMakeLists.txt  crossvalidate.py  crossvalidate.txt  crossvalidate_nounified.txt  gen_sgraph.py  installgflags.sh  lib.py  lib_transform.py  main.ipynb  main.py  matrix.xlsx  mf-graphlab-main.ipynb  mf-graphlab-main.py  nomad.cpp  nomad.py  outputParser.py  parallelSGD.py  plot.ipynb  runexperiment.py  slice.cpp  slice2.cpp  slicedata.ipynb  slicedata.py  slicedata_cs.py  transform-ml20m.ipynb  transform-ml20m.py  valid_nounified_validation_result.txt  valid_unified_validation_result.txt
data/: netflix_mm_10000_1000.mtx
link-prediction-paper/: equation.tex  nips15submit_e.sty  paper_supasorn_kanitw.bib  paper_supasorn_kanitw.tex
output_crossvalid/: 10_0.001_0.001.txt  10_0.001_0.01.txt  10_0.001_0.1.txt  10_0.001_0.txt  10_0.001_1.txt  10_0.001_10.txt  10_0.01_0.001.txt  10_0.01_0.01.txt  10_0.01_0.1.txt  10_0.01_0.txt  10_0.01_1.txt  10_0.01_10.txt  10_0.1_0.001.txt  10_0.1_0.01.txt  10_0.1_0.1.txt  10_0.1_0.txt  10_0.1_1.txt  10_0.1_10.txt  10_0_0.001.txt  10_0_0.01.txt  10_0_0.1.txt  10_0_0.txt  10_0_1.txt  10_0_10.txt  10_10_0.001.txt  10_10_0.01.txt  10_10_0.1.txt  10_10_0.txt  10_10_1.txt  10_10_10.txt  10_1_0.001.txt  10_1_0.01.txt  10_1_0.1.txt  10_1_0.txt  10_1_1.txt  10_1_10.txt  20_0.001_0.001.txt  20_0.001_0.01.txt  20_0.001_0.1.txt  20_0.001_0.txt  (+68 more)
output_crossvalid_nounified/: 10_0.001_0.001.txt  10_0.001_0.01.txt  10_0.001_0.1.txt  10_0.001_0.txt  10_0.001_1.txt  10_0.001_10.txt  10_0.01_0.001.txt  10_0.01_0.01.txt  10_0.01_0.1.txt  10_0.01_0.txt  10_0.01_1.txt  10_0.01_10.txt  10_0.1_0.001.txt  10_0.1_0.01.txt  10_0.1_0.1.txt  10_0.1_0.txt  10_0.1_1.txt  10_0.1_10.txt  10_0_0.001.txt  10_0_0.01.txt  10_0_0.1.txt  10_0_0.txt  10_0_1.txt  10_0_10.txt  10_10_0.001.txt  10_10_0.01.txt  10_10_0.1.txt  10_10_0.txt  10_10_1.txt  10_10_10.txt  10_1_0.001.txt  10_1_0.01.txt  10_1_0.1.txt  10_1_0.txt  10_1_1.txt  10_1_10.txt  20_0.001_0.001.txt  20_0.001_0.01.txt  20_0.001_0.1.txt  20_0.001_0.txt  (+68 more)
(+53 files in other folders)
